--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">MyCoding-Blog</a>
+        <a class="navbar-brand" href="/MyCoding-Blog/">MyCoding-Blog</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -36,7 +36,7 @@
               <a class="nav-link active" aria-current="page" href="/">Home</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/about.html">About</a>
+              <a class="nav-link" href="/MyCoding-Blog/about.html">About</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -61,7 +61,7 @@
               </ul>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/contact.html">Contact Us</a>
+              <a class="nav-link" href="/MyCoding-Blog/contact.html">Contact Us</a>
             </li>
           </ul>
           <form class="d-flex">
