--- a/index.html
+++ b/index.html
@@ -292,8 +292,7 @@
               <h3 class="mb-0">Global Conferencing</h3>
               <div class="mb-1 text-muted">Nov 12</div>
               <p class="card-text mb-auto">
-                This is a wider card with supporting text below as a natural
-                lead-in to additional content.
+                Global Conferencing StartMeeting has you covered wherever your business takes you – from India, the United Kingdom, Argentina, Tanzania and more. 
               </p>
               <a href="#" class="stretched-link">Continue reading</a>
             </div>
@@ -318,8 +317,7 @@
               <h3 class="mb-0">Learn Design</h3>
               <div class="mb-1 text-muted">Nov 11</div>
               <p class="mb-auto">
-                This is a wider card with supporting text below as a natural
-                lead-in to additional content.
+               Learning Design is the framework that supports learning experiences. It refers to deliberate choices about what, when, where and how to teach.
               </p>
               <a href="#" class="stretched-link">Continue reading</a>
             </div>
@@ -344,8 +342,7 @@
               <h3 class="mb-0">Bootstrap Templates</h3>
               <div class="mb-1 text-muted">Nov 12</div>
               <p class="card-text mb-auto">
-                This is a wider card with supporting text below as a natural
-                lead-in to additional content.
+                Bootstrap templates are scaffolds, blueprints, or base layouts that offer no custom styling past what is already included with the base Bootstrap framework.
               </p>
               <a href="#" class="stretched-link">Continue reading</a>
             </div>
@@ -370,8 +367,9 @@
               <h3 class="mb-0">Learn Python</h3>
               <div class="mb-1 text-muted">Nov 12</div>
               <p class="card-text mb-auto">
-                This is a wider card with supporting text below as a natural
-                lead-in to additional content.
+                Python is a programming language.
+
+        Python can be used on a server to create web applications.
               </p>
               <a href="#" class="stretched-link">Continue reading</a>
             </div>
